src/objects/Sample_Request_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Sample_Quantity__c</fullName>
        <label>Bulk Sample Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Dispatch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Dispatch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Development Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followup_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Followup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_code_External_Product_Code__c</fullName>
        <formula>Product__r.External_Product_Code__c</formula>
        <label>Material code/External Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Modified By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Product</label>
        <referenceTo>OpportunityLineItem</referenceTo>
        <relationshipLabel>Sample Request Line Items</relationshipLabel>
        <relationshipName>Sample_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sample Request Line Items</relationshipLabel>
        <relationshipName>Sample_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Dropped_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Dropped Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quantity_Dispatched__c</fullName>
        <label>Quantity Dispatched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Resampling__c</fullName>
        <label>Reason for Resampling</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sampling_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Quantity</fullName>
                </value>
                <value>
                    <fullName>Change in Sample Spec</fullName>
                </value>
                <value>
                    <fullName>Change in Quantity &amp; Sample Spec</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resample_Request_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resample Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resample_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resample Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resampling_Quantity__c</fullName>
        <label>Resampling Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Line_Item_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OSSM Line Item Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Acceptance_Rejection_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Acceptance/ Rejection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sample_Due_Date__c</fullName>
        <formula>Sample_Request__r.Sample_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Feedback__c</fullName>
        <description>Helps to capture the feedback received from the customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sample_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sample_Request__c</fullName>
        <label>Sample Request</label>
        <referenceTo>Sample_Request__c</referenceTo>
        <relationshipLabel>Sample Request Line Items</relationshipLabel>
        <relationshipName>Sample_Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sample_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sample_with_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample with Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sampling_Status__c</fullName>
        <label>Sampling Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sampling_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spec_Change_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spec Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_measure__c</fullName>
        <label>Unit of measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MT</fullName>
                    <label>Metric Ton</label>
                </value>
                <value>
                    <fullName>LB</fullName>
                    <label>US pound</label>
                </value>
                <value>
                    <fullName>KG</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>Gram</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sample Request Line Item</label>
    <nameField>
        <displayFormat>SRLI-{00000}</displayFormat>
        <label>Sample Request Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>